ppx/tests/failing/1.ml
let _foo _ =
  let[@reaml] _ = () in
  ()
